[package]
name = "tor_client"
version = "0.0.10"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for the local TOR router instance"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/tor-client"
repository = "https://github.com/resolvingarchitecture/tor-client"
publish = true
readme = "README.md"
keywords = ["TOR","TOR-client"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
dirs = "2.0.2"
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.10"

[package.metadata.deb]
maintainer = "Brian Taylor <brian@resolvingarchitecture.io>"
copyright = "Unlicense"
license-file = ["LICENSE","0"]
extended-description = """\
A TOR client for the local TOR router instance. Provides \
a CLI and a Service option that can be ran within the RA Service Bus."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/tor_client", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tor_client/README", "644"],
]